[gd_scene load_steps=37 format=2]

[ext_resource path="res://dlcs/3D/menu/menu.gd" type="Script" id=1]
[ext_resource path="res://dlcs/3D/music/intro.ogg" type="AudioStream" id=2]
[ext_resource path="res://dlcs/3D/menu/button_play.png" type="Texture" id=3]
[ext_resource path="res://dlcs/3D/menu/button_play_hover.png" type="Texture" id=4]
[ext_resource path="res://dlcs/3D/menu/button_settings.png" type="Texture" id=5]
[ext_resource path="res://dlcs/3D/menu/button_settings_hover.png" type="Texture" id=6]
[ext_resource path="res://dlcs/3D/menu/button_quit.png" type="Texture" id=7]
[ext_resource path="res://dlcs/3D/menu/button_quit_hover.png" type="Texture" id=8]
[ext_resource path="res://dlcs/3D/menu/button_font.tres" type="DynamicFont" id=9]
[ext_resource path="res://dlcs/3D/menu/button_pressed.tres" type="StyleBox" id=10]
[ext_resource path="res://dlcs/3D/menu/button_normal.tres" type="StyleBox" id=11]
[ext_resource path="res://themes/theme_test.tres" type="Theme" id=12]

[sub_resource type="AnimationNodeAnimation" id=1]
resource_local_to_scene = true
animation = "eyes-cycle"

[sub_resource type="AnimationNodeAnimation" id=2]
resource_local_to_scene = true
animation = "Idlecombatrest-cycle"

[sub_resource type="AnimationNodeBlend2" id=3]
resource_local_to_scene = true
filter_enabled = true
filters = [ "Robot_Skeleton/Skeleton:eyelid.d.L", "Robot_Skeleton/Skeleton:eyelid.d.R", "Robot_Skeleton/Skeleton:eyelid.u.L", "Robot_Skeleton/Skeleton:eyelid.u.R", "Robot_Skeleton/Skeleton:eyes" ]

[sub_resource type="AnimationNodeBlendTree" id=4]
resource_local_to_scene = true
graph_offset = Vector2( -401, 57 )
nodes/Animation/node = SubResource( 2 )
nodes/Animation/position = Vector2( -120, 100 )
"nodes/Animation 2/node" = SubResource( 1 )
"nodes/Animation 2/position" = Vector2( -140, 220 )
nodes/Blend2/node = SubResource( 3 )
nodes/Blend2/position = Vector2( 180, 120 )
nodes/output/position = Vector2( 420, 120 )
node_connections = [ "output", 0, "Blend2", "Blend2", 0, "Animation", "Blend2", 1, "Animation 2" ]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="ButtonGroup" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0, 0, 0 )
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_color = Color( 1, 1, 1, 0.6 )
shadow_size = 3

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0, 0, 0, 0 )
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_color = Color( 1, 1, 1, 0.6 )
shadow_size = 3

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="ButtonGroup" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="ButtonGroup" id=17]

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="StyleBoxEmpty" id=19]

[sub_resource type="ButtonGroup" id=20]

[sub_resource type="StyleBoxEmpty" id=21]

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0, 0, 0, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.34902, 0.34902, 0.34902, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_color = Color( 1, 1, 1, 0.6 )
shadow_size = 3

[sub_resource type="DynamicFontData" id=23]
font_path = "res://menu/font/PT_Sans-Web-Bold.ttf"

[sub_resource type="DynamicFont" id=24]
size = 40
font_data = SubResource( 23 )

[node name="main" type="Control"]
script = ExtResource( 1 )

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
autoplay = true

[node name="anim_tree" type="AnimationTree" parent="."]
tree_root = SubResource( 4 )
anim_player = NodePath("../Scene Root/AnimationPlayer")
parameters/Blend2/blend_amount = 0

[node name="ui" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 0.42, 0.42 )

[node name="main" type="Control" parent="ui"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="play" type="TextureButton" parent="ui/main"]
margin_left = 100.0
margin_top = 390.0
margin_right = 400.0
margin_bottom = 440.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )

[node name="settings" type="TextureButton" parent="ui/main"]
margin_left = 100.0
margin_top = 490.0
margin_right = 400.0
margin_bottom = 540.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )

[node name="quit" type="TextureButton" parent="ui/main"]
margin_left = 100.0
margin_top = 590.0
margin_right = 400.0
margin_bottom = 640.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )

[node name="settings" type="Control" parent="ui"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="gi_label" type="Label" parent="ui/settings"]
margin_left = 30.0
margin_top = 412.0
margin_right = 371.0
margin_bottom = 465.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Global Illumination:"

[node name="gi_label2" type="Label" parent="ui/settings"]
margin_left = 25.0
margin_top = 160.0
margin_right = 1528.0
margin_bottom = 358.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "KEY_CONFIG"
align = 1
valign = 1

[node name="gi_high" type="Button" parent="ui/settings"]
margin_left = 400.0
margin_top = 412.0
margin_right = 650.0
margin_bottom = 469.0
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = ExtResource( 11 )
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
toggle_mode = true
pressed = true
group = SubResource( 6 )
text = "KEY_High"

[node name="gi_low" type="Button" parent="ui/settings"]
margin_left = 690.0
margin_top = 412.0
margin_right = 940.0
margin_bottom = 469.0
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/focus = SubResource( 7 )
custom_styles/normal = ExtResource( 11 )
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
toggle_mode = true
group = SubResource( 6 )
text = "KEY_Low"

[node name="gi_disabled" type="Button" parent="ui/settings"]
margin_left = 980.0
margin_top = 412.0
margin_right = 1230.0
margin_bottom = 469.0
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/focus = SubResource( 8 )
custom_styles/normal = ExtResource( 11 )
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
toggle_mode = true
group = SubResource( 6 )
text = "KEY_DIS"

[node name="aa_label" type="Label" parent="ui/settings"]
margin_left = 30.0
margin_top = 510.0
margin_right = 368.0
margin_bottom = 563.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Anti Aliasing:"

[node name="aa_8x" type="Button" parent="ui/settings"]
margin_left = 400.0
margin_top = 510.0
margin_right = 650.0
margin_bottom = 567.0
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
custom_styles/normal = ExtResource( 11 )
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
toggle_mode = true
pressed = true
group = SubResource( 12 )
text = "8x"

[node name="aa_4x" type="Button" parent="ui/settings"]
margin_left = 690.0
margin_top = 510.0
margin_right = 940.0
margin_bottom = 567.0
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/focus = SubResource( 13 )
custom_styles/normal = ExtResource( 11 )
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
toggle_mode = true
group = SubResource( 12 )
text = "4x"

[node name="aa_2x" type="Button" parent="ui/settings"]
margin_left = 980.0
margin_top = 510.0
margin_right = 1230.0
margin_bottom = 567.0
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/focus = SubResource( 14 )
custom_styles/normal = ExtResource( 11 )
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
toggle_mode = true
group = SubResource( 12 )
text = "2x"

[node name="aa_disabled" type="Button" parent="ui/settings"]
margin_left = 1270.0
margin_top = 510.0
margin_right = 1520.0
margin_bottom = 567.0
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/focus = SubResource( 15 )
custom_styles/normal = ExtResource( 11 )
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
toggle_mode = true
group = SubResource( 12 )
text = "KEY_DIS"

[node name="ssao_label" type="Label" parent="ui/settings"]
margin_left = 30.0
margin_top = 620.0
margin_right = 368.0
margin_bottom = 673.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "SSAO:"

[node name="ssao_high" type="Button" parent="ui/settings"]
margin_left = 400.0
margin_top = 620.0
margin_right = 650.0
margin_bottom = 677.0
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/focus = SubResource( 16 )
custom_styles/normal = ExtResource( 11 )
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
toggle_mode = true
pressed = true
group = SubResource( 17 )
text = "KEY_High"

[node name="ssao_low" type="Button" parent="ui/settings"]
pause_mode = 2
margin_left = 690.0
margin_top = 620.0
margin_right = 940.0
margin_bottom = 677.0
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/focus = SubResource( 18 )
custom_styles/normal = ExtResource( 11 )
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
toggle_mode = true
group = SubResource( 17 )
text = "KEY_Low"

[node name="ssao_disabled" type="Button" parent="ui/settings"]
margin_left = 980.0
margin_top = 620.0
margin_right = 1230.0
margin_bottom = 677.0
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/focus = SubResource( 19 )
custom_styles/normal = ExtResource( 11 )
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
toggle_mode = true
group = SubResource( 17 )
text = "KEY_DIS"

[node name="resolution_label" type="Label" parent="ui/settings"]
visible = false
margin_left = 30.0
margin_top = 730.0
margin_right = 368.0
margin_bottom = 783.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Resolution:"

[node name="resolution_native" type="Button" parent="ui/settings"]
visible = false
margin_left = 400.0
margin_top = 730.0
margin_right = 650.0
margin_bottom = 787.0
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/focus = SubResource( 16 )
custom_styles/normal = ExtResource( 11 )
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
toggle_mode = true
pressed = true
group = SubResource( 20 )
text = "Native"

[node name="resolution_1080" type="Button" parent="ui/settings"]
visible = false
margin_left = 690.0
margin_top = 730.0
margin_right = 940.0
margin_bottom = 787.0
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/focus = SubResource( 16 )
custom_styles/normal = ExtResource( 11 )
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
toggle_mode = true
group = SubResource( 20 )
text = "1080"

[node name="resolution_720" type="Button" parent="ui/settings"]
visible = false
margin_left = 980.0
margin_top = 730.0
margin_right = 1230.0
margin_bottom = 787.0
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/focus = SubResource( 16 )
custom_styles/normal = ExtResource( 11 )
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
toggle_mode = true
group = SubResource( 20 )
text = "720"

[node name="resolution_576" type="Button" parent="ui/settings"]
visible = false
margin_left = 1270.0
margin_top = 730.0
margin_right = 1520.0
margin_bottom = 787.0
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/focus = SubResource( 16 )
custom_styles/normal = ExtResource( 11 )
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
toggle_mode = true
group = SubResource( 20 )
text = "576"

[node name="apply" type="Button" parent="ui/settings"]
margin_left = 400.0
margin_top = 730.0
margin_right = 650.0
margin_bottom = 787.0
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/focus = SubResource( 21 )
custom_styles/normal = SubResource( 22 )
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "KEY_Play"

[node name="cancel" type="Button" parent="ui/settings"]
visible = false
margin_left = 980.0
margin_top = 920.0
margin_right = 1230.0
margin_bottom = 977.0
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/focus = SubResource( 21 )
custom_styles/normal = SubResource( 22 )
custom_fonts/font = SubResource( 24 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Cancel"

[node name="VBoxContainer" type="VBoxContainer" parent="ui/settings"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = 860.0
margin_right = 1021.0
margin_bottom = 940.0
rect_scale = Vector2( 1.5, 1.5 )
theme = ExtResource( 12 )

[node name="CheckBox3" type="CheckBox" parent="ui/settings/VBoxContainer"]
margin_right = 1021.0
margin_bottom = 39.0
text = "GLES2 Use Nvidia Rect Flicker Workaround"

[node name="CheckBox2" type="CheckBox" parent="ui/settings/VBoxContainer"]
margin_top = 43.0
margin_right = 1021.0
margin_bottom = 82.0
text = "GLES2 Fallback"

[node name="CheckBox" type="CheckBox" parent="ui/settings/VBoxContainer"]
margin_top = 86.0
margin_right = 1021.0
margin_bottom = 125.0
text = "Low Processor mode"

[node name="loading" type="Control" parent="ui"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="label" type="Label" parent="ui/loading"]
margin_left = 120.0
margin_top = 930.0
margin_right = 288.0
margin_bottom = 983.0
custom_fonts/font = ExtResource( 9 )
text = "Loading..."

[node name="begin_load_timer" type="Timer" parent="."]
wait_time = 0.2
[connection signal="pressed" from="ui/main/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="ui/main/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="ui/main/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="ui/settings/apply" to="." method="_on_apply_pressed"]
[connection signal="pressed" from="ui/settings/cancel" to="." method="_on_cancel_pressed"]
[connection signal="timeout" from="begin_load_timer" to="." method="_on_begin_load_timer_timeout"]
